<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sparsh.smartparkingsystem.registration.VerificationActivity">

    <TextView
        android:id="@+id/tv_verify_title"
        style="@style/Reg_log_Style"
        android:layout_alignParentTop="true"
        android:text="@string/txt_title_verification" />

    <TextView
        android:id="@+id/tv_vfy_user_mob"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_verify_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/shape_blue"
        android:gravity="center"
        android:textColor="@color/app_theme_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/vfy_edt_user_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_vfy_user_mob"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_blue"
        android:gravity="center"
        android:layout_margin="20dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/hint_verify_code"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_verify"
        style="@style/Reg_btnStyle"
        android:layout_below="@+id/vfy_edt_user_code"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_verify" />

    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_resend_code_lbl"
        android:textColor="@color/app_theme_color"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
