<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_color"
    tools:context="com.sparsh.smartparkingsystem.registration.LoginActivity">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/app_name_splash"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundedcorner"
        android:layout_margin="20dp"
        android:layout_below="@+id/tv_header">

        <TextView
            android:id="@+id/tv_login_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/txt_title_login"
            android:textColor="@color/app_theme_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_user_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_login_lbl"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@color/bg_txt_blue">

            <ImageView
                android:id="@+id/iv_email_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:src="@drawable/mail_icon_y" />

            <EditText
                android:id="@+id/edt_login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iv_email_icon"
                android:ems="10"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@color/bg_txt_blue"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/rl_user_email"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:background="@color/bg_txt_blue">

            <ImageView
                android:id="@+id/iv_pswd_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:src="@drawable/key_icon" />

            <EditText
                android:id="@+id/edt_login_pswd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_toEndOf="@+id/iv_pswd_icon"
                android:ems="10"
                android:background="@color/bg_txt_blue"
                android:hint="@string/hint_pswd"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_forgot_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/rl_password"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_forgot_pswd"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Reg_btnStyle"
            android:layout_below="@+id/tv_forgot_pswd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_login" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
