<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_pswd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sparsh.smartparkingsystem.profile.Forget_Pswd_Activity">

    <!-- Header View -->

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_theme_color">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_title_forgot_pswd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@null"
            android:src="@drawable/back_button"
            android:visibility="visible" />
    </RelativeLayout>

    <!-- Forgot Screen -->

    <RelativeLayout
        android:id="@+id/rl_forgot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_header"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/rl_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_blue">

            <ImageView
                android:id="@+id/iv_email_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:src="@drawable/email_icon" />

            <EditText
                android:id="@+id/edt_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iv_email_icon"
                android:background="@color/bg_transparent"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_forgot"
            style="@style/Reg_btnStyle"
            android:layout_marginTop="50dp"
            android:text="Get OTP"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@+id/rl_forgot_email"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <!-- Verification Screen -->

    <RelativeLayout

        android:id="@+id/rl_verify_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_header"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_verify_code_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/txt_otp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rl_verify_code_lbl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_verify_code_lbl"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_blue">

            <ImageView
                android:id="@+id/iv_code_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:src="@drawable/key_icon" />

            <EditText
                android:id="@+id/edt_forgot_OTP"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iv_code_icon"
                android:background="@color/bg_transparent"
                android:ems="10"
                android:hint="@string/hint_verify_code"
                android:inputType="number"
                android:maxLines="1"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_verify"
            style="@style/Reg_btnStyle"
            android:layout_below="@+id/rl_verify_code_lbl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/btn_verify" />

    </RelativeLayout>

    <!-- Reset Password Screen -->

    <RelativeLayout
        android:id="@+id/rl_reset_pswd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_header"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_reset_pswd_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/txt_reset_pswd"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rl_reset_new_pswd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_reset_pswd_lbl"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_blue">

            <ImageView
                android:id="@+id/iv_reset_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:src="@drawable/key_icon" />

            <EditText
                android:id="@+id/edt_new_reset_pswd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iv_reset_icon"
                android:background="@color/bg_transparent"
                android:ems="10"
                android:hint="@string/hint_new_pswd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_reset_cnf_pswd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rl_reset_new_pswd"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_blue">

            <ImageView
                android:id="@+id/iv_reset_cnf_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@null"
                android:src="@drawable/key_icon" />

            <EditText
                android:id="@+id/edt_cnf_reset_pswd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/iv_reset_cnf_icon"
                android:background="@color/bg_transparent"
                android:ems="10"
                android:hint="@string/hint_cnf_pswd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Reg_btnStyle"
            android:layout_below="@+id/rl_reset_cnf_pswd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/btn_submit" />

    </RelativeLayout>


</RelativeLayout>
